--- a/index.html
+++ b/index.html
@@ -1,7 +1,78 @@
-<!DOCTYPE html>
-<html>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+  
+  <title>Andreas Mihatsch</title><meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+  <meta name="author" content="Andreas Mihatsch">
+  <meta http-equiv="Content-Language" content="en">
+  <meta name="keywords" content="Andreas Mihatsch, math, mathematics, arithmetic geometry, Shimura varieties, Zhejiang University, associate professor" lang="en">
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<H1>Andreas Mihatsch</H1>
+
+<p><img src="portrait.jpg" alt="Portrait of Andreas Mihatsch" style="float:right;">
+The image will float to the right of the text.</p>
+
+<table>
+<td>
+<ADDRESS>
+Professeur de math&eacute;matiques &agrave; <a href=https://www.imo.universite-paris-saclay.fr/fr/> l'Institut de Math&eacute;matiques d'Orsay</a> dans l'equipe <a href="https://www.imo.universite-paris-saclay.fr/fr/la-recherche/arithmetique-et-geometrie-algebrique/"> Arithm&eacute;tique et g&eacute;om&eacute;trie alg&eacute;brique</a><BR>
+<BR>
+Addresse: <BR>
+Universit&eacute; Paris-Saclay <BR>
+Laboratoire de math&eacute;mathiques d'Orsay<BR>
+Rue Michel Magat, B&acirc;timent 307<BR>
+91405 Orsay, France<BR>
+
+<p>
+E-mail : <A HREF="mailto:janschuetz AT math.cnrs.fr">
+janschuetz AT math.cnrs.fr</A>
+<p>
+Bureau: 2I20  
+</ADDRESS>
+</table>
+
+
+
+
+</ul>
+<hr>
+<h3>(Pr&eacute;)publications</h3>
+<ul>
+  <li><p><a href="https://arxiv.org/pdf/2412.20968"> A 6-functor formalism for solid quasi-coherent sheaves on the Fargues-Fontaine curve</a> (with Arthur-C&eacute;sar Le Bras, Lucas Mann), Preprint, 2024. </p></li>
+  
+     <li><p><a href="https://arxiv.org/pdf/2403.01951"> Descent for solid quasi-coherent sheaves on perfectoid spaces</a> (with Lucas Mann), Preprint, 2024. </p></li> 
+   <li><p><a href="https://arxiv.org/pdf/2312.07554.pdf"> The small p-adic Simpson correspondence in terms of moduli spaces</a> (with Ben Heuer, Arthur-C&eacute;sar Le Bras), accepted for publication in MRL, 2023. </p></li> 
+   <li><p><a href="https://arxiv.org/pdf/2311.04043"> Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic </a> (with Jo&atilde;o Louren&ccedil;o, Jize Yu, Zhiyou Wu), Preprint, 2023. </p></li> 
+   <li><p><a href="https://arxiv.org/pdf/2302.12747.pdf"> Hodge-Tate stacks and non-abelian p-adic Hodge theory of v-perfect complexes on smooth rigid spaces</a> (with Ben Heuer, Arthur-C&eacute;sar Le Bras), accepted in Crelle, 2023. </p></li> 
+    <li><p><a href="https://arxiv.org/pdf/1606.01029"> G-bundles on the absolute Fargues-Fontaine curve</a>, Acta Arithmetica 207 (2023), 351-363. <a href="https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica/all/207/4/115090/g-bundles-on-the-absolute-fargues-fontaine-curve"> Journal </a> </p></li> 
+    <li><p><a href="https://arxiv.org/pdf/2211.08470"> v-vector bundles on p-adic fields and Sen theory via the Hodge-Tate stack</a> (with Ben Heuer, Arthur-C&eacute;sar Le Bras), accepted in Simons symposium proceedings, 2024. </p></li>
+    <li><p><a href="https://arxiv.org/pdf/2201.01234"> On the p-adic theory of local models</a> (with Ian Gleason, Jo&atilde;o Louren&ccedil;o, Timo Richarz), Preprint, 2022. </p></li>
+    <li><p><a href="https://arxiv.org/pdf/2111.11116"> A Fourier transform for Banach-Colmez spaces</a> (with Arthur-C&eacute;sar Le Bras), accepted for publication in JEMS, 2021. </p></li>
+    <li><p><a href="https://arxiv.org/pdf/2104.04701"> Averaging functors in Fargues' program for GL_n</a> (with Arthur-C&eacute;sar Le Bras), Preprint, 2021. </p></li>
+    <li><p><a href="https://arxiv.org/pdf/1907.10525"> Prismatic Dieudonn&eacute; theory</a> (with Arthur-C&eacute;sar Le Bras), 
+Forum of Mathematics, Pi, 11, E2. doi:10.1017/fmp.2022.22, 2023. <a href="https://www.cambridge.org/core/journals/forum-of-mathematics-pi/article/prismatic-dieudonne-theory/F37879186079B53D1BB92F28AFD12BFC"> Journal </a> </p></li>
+    <li><p><a href="https://arxiv.org/pdf/1907.10530"> The p-completed cyclotomic trace in degree 2</a> (with Arthur-C&eacute;sar Le Bras), Annals of K-theory 5-3 (2020), 539--580. DOI 10.2140/akt.2020.5.539 <a href="https://msp.org/akt/2020/5-3/p06.xhtml"> Journal </a></p></li>  
+    <li><p><a href="https://arxiv.org/pdf/1804.06356"> Extending torsors on the punctured Spec(A_inf)</a>, Journal f&uuml;r die reine und angewandte Mathematik (Crelles Journal), Vol.2022, No. 783, pp. 227-268, 2022.<a href="https://www.degruyter.com/document/doi/10.1515/crelle-2021-0077/pdf"> Journal </a> </p></li>  
+    <li><p><a href="https://arxiv.org/pdf/1707.08857"> Breuil-Kisin-Fargues modules with complex multiplication</a>, Journal of the Institute of Mathematics of Jussieu, 2020, pp.1-50. <a href="https://www.cambridge.org/core/journals/journal-of-the-institute-of-mathematics-of-jussieu/article/abs/breuilkisinfargues-modules-with-complex-multiplication/F40F54628790010D62DFB254942C8119"> Journal </a> <a href="./cm_bkf_modules_erratum.pdf"> Erratum</a> <a href="https://www.cambridge.org/core/journals/journal-of-the-institute-of-mathematics-of-jussieu/article/erratum-to-the-paper-breuilkisinfargues-modules-with-complex-multiplication/3D408076DFEF9FE0006421047AD600F1"> Journal </a> </p></li>
+    <li><p><a href="https://arxiv.org/pdf/1703.00702"> A Tannakian classification of torsors on the projective line</a>, Comptes Rendus Mathematique Volume 356, Issues 11-12, November-Dezember 2018, Pages 1203-1214.<a href="http://www.numdam.org/articles/10.1016/j.crma.2018.10.006/"> Journal </a> </p></li>
+    <li><p><a href="https://arxiv.org/pdf/1703.00700"> Reductive group schemes over the Fargues-Fontaine curve</a>, Mathematische Annalen, 374(3), 1219-1260 <a href="https://link.springer.com/article/10.1007/s00208-018-1785-6"> Journal </a> </p></li> 
+    <li><p><a href="https://arxiv.org/pdf/1506.02437"> Descent of algebraic cycles </a>, Homology, Homotopy and Applications, vol. 19(1), 2017, pp.134-154 <a href="https://www.intlpress.com/site/pub/pages/journals/items/hha/content/vols/0019/0001/a007/index.php"> Journal </a> </p></li> 
+<br>
+
+
+
+</ul>
+<hr>
+<h3>Enseigenement et activit&eacute;s</h3>
+<ul>
+
+<li><a href="./lehre/"> Cours magistraux, S&eacute;minaires, Groupes de travail,...</a></li>
+
+</ul>
+<hr>
+<h3>Divers</h3>
+<ul>
+<li><a href="./skripte/"> Manuscrits, Notes,...</a></li>
+
+</body></html>
