--- a/aipf.html
+++ b/aipf.html
@@ -35,7 +35,7 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 <tr>
 	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">March 4</td>
 	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">First meeting</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Program introduction, talk distribution</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Program introduction, seminar organization</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 11 (?)</td>
