--- a/aipf.html
+++ b/aipf.html
@@ -18,7 +18,7 @@
 <p>The proof in [Li-Liu] is via an arithmetic variant of the doubling method. A key input here is the theorem of Li-Zhang about intersection numbers of special divisors.
 For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 
-<p>The program has been inspired by a <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">similar seminar at MIT</a>.</p>
+<p>Our seminar has been inspired by a <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">similar seminar at MIT</a>.</p>
 
 <h2>Schedule</h2>
 
