--- a/aipf.html
+++ b/aipf.html
@@ -40,29 +40,29 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 11 (?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">The Siegel-Weil formula</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Introduce the Weil representation, theta lifting and the Siegel-Weil formula.<br>References: [Li, §2.1-§2.3], [KR, §7-§8], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Introduce the Weil representation, theta lifting and the Siegel-Weil formula.<br>[Li, §2.1-§2.3], [KR, §7-§8], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
 </tr>
 <tr>
 	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">March 18 (?)</td>
 	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Rallis inner product formula</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Define the doubling L-function and explain the Rallis inner product formula.<br> References: [Li, §2.4], [Li-Liu, §3], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Define the doubling L-function and explain the Rallis inner product formula.<br>[Li, §2.4], [Li-Liu, §3], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
 </tr>
 </table>
 <table width="100%" style="margin:0px 0px 20px 16px; border:1px solid black; border-collapse:collapse;">
 <tr>
 	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">March 25 (?)</td>
 	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Unitary Shimura varieties</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Define unitary Shimura varieties and special cycles. State their most basic properties.<br> *References: [Li, §3.1-§3.2], [KR, §2-§4], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define unitary Shimura varieties. State their most basic properties.<br>[Li, §3.1], [KR, §2-§4], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 1 (?)</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Intersection numbers</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Introduce the supersingular locus. Show that Z(T) is entirely contained in the supersingular locus when T is n-by-n and non-degenerate.<br> *References: [KR, §5-§6]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Special cycles</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Introduce special cycles. Show that Z(T) is entirely contained in the supersingular locus when T is n-by-n and non-degenerate.<br>[KR, §2 and §5-§6]</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 8 (?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Siegel-Weil formula</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Define intersection numbers of local special divisors. Explain the main result of [Li-Zhang].<br> *References: [Li-Zhang, §2.1-§2.4], and [KR, §11]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define intersection numbers of local special divisors. Explain the main result of [Li-Zhang].<br>[Li-Zhang, §2.1-§2.4], and [KR, §11]</td>
 </tr>
 </table>
 <table width="100%" style="margin:0px 0px 20px 16px; border:1px solid black; border-collapse:collapse;">
