--- a/aipf.html
+++ b/aipf.html
@@ -27,49 +27,51 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 <table width="100%" style="margin:0px 0px 20px 16px; border:1px solid black; border-collapse:collapse;">
 <tr>
 	<th width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Date</th>
-	<th width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Topic</th>
-	<th style="border:1px solid black; border-collapse:collapse; padding:5px;">Comments</th>
+	<th width="170px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Topic</th>
+	<th style="border:1px solid black; border-collapse:collapse; padding:5px;">Contents</th>
+	<th width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Speaker</th>
 </tr>
-<table>
-<table width="100%" style="margin:0px 0px 20px 16px; border:1px solid black; border-collapse:collapse;">
 <tr>
-	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">March 4</td>
-	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">First meeting</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 4</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">First meeting</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Program introduction, seminar organization</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;"></td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 11 (?)</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">The Siegel-Weil formula</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 11</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Siegel-Weil formula</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Introduce the Weil representation, theta lifting and the Siegel-Weil formula.<br>[Li, §2.1-§2.3], [KR, §7-§8], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Chi Zhuoni</td>
 </tr>
 <tr>
-	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">March 18 (?)</td>
-	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Rallis inner product formula</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 18</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Rallis inner product formula</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Define the doubling L-function and explain the Rallis inner product formula.<br>[Li, §2.4], [Li-Liu, §3], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Ying Hao</td>
 </tr>
-</table>
-<table width="100%" style="margin:0px 0px 20px 16px; border:1px solid black; border-collapse:collapse;">
 <tr>
-	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">March 25 (?)</td>
-	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Unitary Shimura varieties</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 25 (?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Unitary Shimura varieties</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define unitary Shimura varieties. State their most basic properties.<br>[Li, §3.1], [KR, §2-§4], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">TBA</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 1 (?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Special cycles</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Introduce special cycles. Show that Z(T) is entirely contained in the supersingular locus when T is n-by-n and non-degenerate.<br>[KR, §2 and §5-§6]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">TBA</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 8 (?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Siegel-Weil formula</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define intersection numbers of local special divisors. Explain the main result of [Li-Zhang].<br>[Li-Zhang, §2.1-§2.4], and [KR, §11]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Xiong Liangyi</td>
 </tr>
-</table>
-<table width="100%" style="margin:0px 0px 20px 16px; border:1px solid black; border-collapse:collapse;">
 <tr>
-	<td width="100px" style="border:1px solid black; border-collapse:collapse; padding:5px;">April 15/22/29 (?)</td>
-	<td width="220px" style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic doubling</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 15/22/29 (?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic doubling</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Topics to be discussed: Beilinson's l-heights, projection to chomologically trivial cycles, application of arithmetic Siegel-Weil to computation of local indices, sketch of proof of [Li-Liu, Theorem 1.5].<br>References: [Li-Liu], and [Li]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.,<br>Yang Haodong</td>
 </tr>
 </table>
 
