--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
 their relations with automorphic representations and orbital integrals, their modularity properties when assembled into arithmetic
 theta series (Kudla program), and algebraic aspects of their intersection theory.<br><br> </p>
 
-<h3>News and Upcoming</h3>
+<h3>Current and Upcoming</h3>
 <table width="100%" style="margin:0px 0px 20px 16px;">
 <tbody>
-<tr><td align="left" valign="top">June 22 - 27</td> <td>Visit to MFO Oberwolfach, Workshop on Non-Archimedean Geometry and Applications </td></tr>
-<tr><td align="left" valign="top">May 5 - 9</td> <td>Visit to the Morningside Center of Mathematics, Beijing</td></tr>
-<tr><td align="left" valign="top">February</td> <td>I've moved to Zhejiang University, Hangzhou</td></tr>
+	<tr><td align="left" valign="top"><a href="aipf.html">Study group on arithmetic inner product formula</a></td></tr>
+</tbody>
+</table>
+<table width="100%" style="margin:0px 0px 20px 16px;">
+<tbody>
+	<tr><td align="left" valign="top">July 7 - 11</td> <td>Visit to Max Planck Institute, Bonn</td></tr>
+	<tr><td align="left" valign="top">June 22 - 27</td> <td>Visit to MFO Oberwolfach, Workshop on Non-Archimedean Geometry and Applications </td></tr>
+	<tr><td align="left" valign="top">May 5 - 9</td> <td>Visit to the Morningside Center of Mathematics, Beijing</td></tr>
+	<tr><td align="left" valign="top">February</td> <td>I've moved to Zhejiang University, Hangzhou</td></tr>
 </tbody>
 </table>
 <hr>
