--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p> My research area is arithmetic geometry. I am especially interested in the geometry of cycles on Shimura varieties,
 their relations with automorphic representations and orbital integrals, their modularity properties when assembled into arithmetic
-theta series (Kudla program), and algebraic aspects of their intersection theory.<br><br> </p>
+theta series (Kudla program), and algebraic aspects of their intersection theory. <a href="CV.pdf">(My CV &#8599;)</a><br><br> </p>
 
 <h3>Current and Upcoming</h3>
 <table width="100%" style="margin:0px 0px 20px 16px;">
@@ -64,7 +64,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <ul style="margin-top:6px; margin-bottom:18px">
 <li><a href="ASW.pdf">An arithmetic Siegel-Weil formula for central simple algebras</a> (with Tonghai Yang), Preprint (2024).</li>
-<li style="margin-top:12px"><a href="https://arxiv.org/abs/2308.02458">A linear AFL for quaternion algebras</a> (with Nuno Hultberg), to appear in Canad. J. Math.</li>
+<li style="margin-top:12px"><a href="https://arxiv.org/abs/2308.02458">A linear AFL for quaternion algebras</a> (with Nuno Hultberg), Canad. J. Math. (2025), <a href="https://doi.org/10.4153/S0008414X24001020">FirstView</a>.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2307.11716">Arithmetic transfer for inner forms of GL_2n</a> (with Qirui Li), Preprint (2023).</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2208.10144">Linear AFL: The non-basic case</a> (with Qirui Li), to appear in Compositio Math.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2112.10018">Delta-Forms on Lubin--Tate Space</a>, Duke Math. J. <b>173</b> (2024), no. 14, 2809--2928.</li>
