--- a/aipf.html
+++ b/aipf.html
@@ -71,7 +71,7 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 15/22/29 (?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic doubling</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Topics to be discussed: Beilinson's l-heights, projection to chomologically trivial cycles, application of arithmetic Siegel-Weil to computation of local indices, sketch of proof of [Li-Liu, Theorem 1.5].<br>References: [Li-Liu], and [Li]</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.,<br>Yang Haodong</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.,<br>Yao Haodong</td>
 </tr>
 </table>
 
