--- a/aipf.html
+++ b/aipf.html
@@ -53,7 +53,7 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 25 (?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Unitary Shimura varieties</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define unitary Shimura varieties. State their most basic properties.<br>[Li, §3.1], [KR, §2-§4], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">TBA</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Jiang Shuhan</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 1 (?)</td>
@@ -104,7 +104,7 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: March 02, 2025</p>
+<p style="color: grey;">Last updated: March 18, 2025</p>
 </footer> 
 
 </div>
