--- a/aipf.html
+++ b/aipf.html
@@ -50,25 +50,25 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Ying Hao</td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">March 25 (?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 1</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Unitary Shimura varieties</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define unitary Shimura varieties. State their most basic properties.<br>[Li, §3.1], [KR, §2-§4], and <a href="https://math.mit.edu/~hao_peng/AIPF-seminar.html">MIT seminar</a> notes</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Jiang Shuhan</td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 1 (?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 8</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Special cycles</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Introduce special cycles. Show that Z(T) is entirely contained in the supersingular locus when T is n-by-n and non-degenerate.<br>[KR, §2 and §5-§6]</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">TBA</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.</td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 8 (?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 15</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Siegel-Weil formula</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define intersection numbers of local special divisors. Explain the main result of [Li-Zhang].<br>[Li-Zhang, §2.1-§2.4], and [KR, §11]</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Xiong Liangyi</td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 15/22/29 (?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">(?)</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic doubling</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Topics to be discussed: Beilinson's l-heights, projection to chomologically trivial cycles, application of arithmetic Siegel-Weil to computation of local indices, sketch of proof of [Li-Liu, Theorem 1.5].<br>References: [Li-Liu], and [Li]</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.,<br>Yao Haodong</td>
