--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 <tbody>
 	<tr><td align="left" valign="top">July 7 - 11</td> <td>Visit to Max Planck Institute, Bonn</td></tr>
 	<tr><td align="left" valign="top">June 22 - 27</td> <td>Visit to MFO Oberwolfach, Workshop on Non-Archimedean Geometry and Applications </td></tr>
+	<tr><td align="left" valign="top">June 3</td> <td>Talk in the International Seminar on Automorphic Forms</td></tr>
 	<tr><td align="left" valign="top">May 5 - 9</td> <td>Visit to the Morningside Center of Mathematics, Beijing</td></tr>
 	<tr><td align="left" valign="top">February</td> <td>I've moved to Zhejiang University, Hangzhou</td></tr>
 </tbody>
@@ -86,7 +87,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: March 18, 2025</p>
+<p style="color: grey;">Last updated: March 31, 2025</p>
 </footer> 
 
 </div>
