--- a/aipf.html
+++ b/aipf.html
@@ -63,15 +63,21 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 15</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Siegel-Weil formula</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Siegel-Weil formula I</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define intersection numbers of local special divisors. Explain the main result of [Li-Zhang].<br>[Li-Zhang, §2.1-§2.4], and [KR, §11]</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Xiong Liangyi</td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">(?)</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">April 22</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Siegel-Weil formula II</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">*Define intersection numbers of local special divisors. Explain the main result of [Li-Zhang].<br>[Li-Zhang, §2.1-§2.4], and [KR, §11]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.</td>
+</tr>
+<tr>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">May 20, 27<br>June 3</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic doubling</td>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Topics to be discussed: Beilinson's l-heights, projection to chomologically trivial cycles, application of arithmetic Siegel-Weil to computation of local indices, sketch of proof of [Li-Liu, Theorem 1.5].<br>References: [Li-Liu], and [Li]</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.,<br>Yao Haodong</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Luo Yu, Mihatsch A.,<br>Yao Haodong</td>
 </tr>
 </table>
 
