--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 <h3>Publications and Preprints</h3>
 
 <ul style="margin-top:6px; margin-bottom:18px">
-<li><a href="ASW.pdf">An arithmetic Siegel-Weil formula for central simple algebras</a> (with Tonghai Yang), Preprint (2024).</li>
+<li><a href="https://arxiv.org/abs/2504.17484">On unitary Shimura varieties at ramified primes</a> (with Yu Luo and Zhiyu Zhang), Preprint (2025).</li>
+<li style="margin-top:12px"><a href="ASW.pdf">An arithmetic Siegel-Weil formula for central simple algebras</a> (with Tonghai Yang), Preprint (2024).</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2308.02458">A linear AFL for quaternion algebras</a> (with Nuno Hultberg), Canad. J. Math. (2025), <a href="https://doi.org/10.4153/S0008414X24001020">FirstView</a>.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2307.11716">Arithmetic transfer for inner forms of GL_2n</a> (with Qirui Li), to appear in Forum Math. Sigma.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2208.10144">Linear AFL: The non-basic case</a> (with Qirui Li), to appear in Compositio Math.</li>
@@ -87,7 +88,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: March 31, 2025</p>
+<p style="color: grey;">Last updated: April 26, 2025</p>
 </footer> 
 
 </div>
