--- a/aipf.html
+++ b/aipf.html
@@ -74,10 +74,28 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.</td>
 </tr>
 <tr>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">May 20, 27<br>June 3</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic doubling</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Topics to be discussed: Beilinson's l-heights, projection to chomologically trivial cycles, application of arithmetic Siegel-Weil to computation of local indices, sketch of proof of [Li-Liu, Theorem 1.5].<br>References: [Li-Liu], and [Li]</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Luo Yu, Mihatsch A.,<br>Yao Haodong</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">May 27</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Arithmetic Doubling - Setting</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Sections 4, 5, and 6 of [Li-Liu]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Mihatsch A.</td>
+</tr>
+<tr>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">June 3</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Local indices I - Inert places</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Section 8 of [Li-Liu]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Yao Haodong</td>
+</tr>
+<tr>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">June 10</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Local indices II - Split and archimedean places</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Sections 7 and 10 of [Li-Liu]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Luo Yu</td>
+</tr>
+<tr>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">June 17</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Proof of main results</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Section 11 of [Li-Liu]</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:5px;">Chi Zhuoni</td>
 </tr>
 </table>
 
@@ -110,7 +128,7 @@ For this reason, our main intermediate goal is to learn about [Li-Zhang].</p>
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: April 25, 2025</p>
+<p style="color: grey;">Last updated: May 26, 2025</p>
 </footer> 
 
 </div>
