--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 <h3>Publications and Preprints</h3>
 
 <ul style="margin-top:6px; margin-bottom:18px">
-<li><a href="Gaussian.pdf">Gaussian test functions for the Jacquet-Rallis relative trace formula</a> (with Siddarth Sankaran and Tonghai Yang), Preprint (2025).</li>
+<li><a href="https://arxiv.org/abs/2508.12598">Gaussian test functions and Jacquet-Rallis transfer</a> (with Siddarth Sankaran and Tonghai Yang), Preprint (2025).</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2504.17484">On unitary Shimura varieties at ramified primes</a> (with Yu Luo and Zhiyu Zhang), Preprint (2025).</li>
 <li style="margin-top:12px"><a href="ASW.pdf">An arithmetic Siegel-Weil formula for central simple algebras</a> (with Tonghai Yang), Preprint (2024).</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2308.02458">A linear AFL for quaternion algebras</a> (with Nuno Hultberg), Canad. J. Math. (2025), <a href="https://doi.org/10.4153/S0008414X24001020">FirstView</a>.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2307.11716">Arithmetic transfer for inner forms of GL_2n</a> (with Qirui Li), to appear in Forum Math. Sigma.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2208.10144">Linear AFL: The non-basic case</a> (with Qirui Li), Compos. Math. <b>161</b> (2025), no. 2, 385--425.</li>
-<li style="margin-top:12px"><a href="https://arxiv.org/abs/2112.10018">Delta-Forms on Lubin--Tate Space</a>, Duke Math. J. <b>173</b> (2024), no. 14, 2809--2928.</li>
+<li style="margin-top:12px"><a href="https://arxiv.org/abs/2112.10018">Delta-Forms on Lubin-Tate Space</a>, Duke Math. J. <b>173</b> (2024), no. 14, 2809--2928.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2104.02779">The Arithmetic Fundamental Lemma Conjecture over a general p-adic field</a> (with Wei Zhang), J. Eur. Math. Soc. <b>26</b> (2024), no. 12, 4831--4901.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2107.12067">On Tropical Intersection Theory</a>, Selecta Math. <b>29</b> (2023), no. 2, Paper No. 17, 34 pp.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2004.12172">Local Constancy of Intersection Numbers</a>, Algebra Number Theory <b>16</b> (2022), no. 2, 505--519.</li>
@@ -90,7 +90,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: July 27, 2025</p>
+<p style="color: grey;">Last updated: August 19, 2025</p>
 </footer> 
 
 </div>
