--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div style="width: 960px; margin: 0 auto;">
 <header>
 <div style="margin: 30px 0px 0px 0px;">
-<table style="padding: 0px 0px 20px 0px;">
+<table style="padding: 0px 0px 0px 0px;">
 <tr>
 <td>
 	<img src="portrait.jpg" alt="Portrait of Andreas Mihatsch" style="float:left; width:200px; height:266px; margin: 0px 20px 0px 0px;">
@@ -33,31 +33,43 @@
 </td>
 </tr>
 </table>
+<p> My research area is arithmetic geometry. I am especially interested in the geometry of cycles on Shimura varieties,
+their relations with automorphic representations and orbital integrals, their modularity properties when assembled into arithmetic
+theta series (Kudla program), and algebraic aspects of their intersection theory. <a href="CV.pdf">(My CV &#8599;)</a></p>
 <hr>
 </div>
 </header>
 
 <body>
-<h3>About</h3>
 
-<p> My research area is arithmetic geometry. I am especially interested in the geometry of cycles on Shimura varieties,
-their relations with automorphic representations and orbital integrals, their modularity properties when assembled into arithmetic
-theta series (Kudla program), and algebraic aspects of their intersection theory. <a href="CV.pdf">(My CV &#8599;)</a><br><br> </p>
+<h3>Activities Fall 2025</h3>
 
-<h3>Current and Upcoming</h3>
-<table width="100%" style="margin:0px 0px 20px 16px;">
-<tbody>
-	<tr><td align="left" valign="top"><a href="aipf.html">Study group on arithmetic inner product formula</a></td></tr>
-</tbody>
+<h4>Introductory course on Shimura varieties</h4>
+
+<p>Please see the <a style="color:#0000EE" href="SV.html">course webpage</a> for the schedule and more information. Lecture notes will be updated regularly here:</p>
+<ul>
+<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Sept 16)</li>
+</ul>
+
+<h4>Q & A session</h4>
+<p>Every week on Thursday, I'm offering an informal discussion session for algebra and number theory. Please see here for <a style="color:#0000EE" href="SV.html">dates and times</a>.
+
+<h4>Study group on cyclic base change and the trace formula</h4>
+
+Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and seminar program</a>.
+
+<h4>Upcoming travels</h4>
+
 </table>
 <table width="100%" style="margin:0px 0px 20px 16px;">
 <tbody>
 	<tr><td align="left" valign="top">November 24 - 28</td> <td>Arithmetic Geometry Conference, Shenzhen (<a href="https://huigaomath.github.io/events/2025/2025-arithgeom-shenzhen.html">Link</a>)</td></tr>
-	<tr><td align="left" valign="top">July 7 - 11</td> <td>Visit to Max Planck Institute, Bonn</td></tr>
+	<tr><td align="left" valign="top">September 23 - 26</td> <td>Visiting Yihang Zhu at Tsinghua University</td></tr>
+<!--	<tr><td align="left" valign="top">July 7 - 11</td> <td>Visit to Max Planck Institute, Bonn</td></tr>
 	<tr><td align="left" valign="top">June 22 - 27</td> <td>Visit to MFO Oberwolfach, Workshop on Non-Archimedean Geometry and Applications </td></tr>
 	<tr><td align="left" valign="top">June 3</td> <td>Talk in the International Seminar on Automorphic Forms</td></tr>
 	<tr><td align="left" valign="top">May 5 - 9</td> <td>Visit to the Morningside Center of Mathematics, Beijing</td></tr>
-	<tr><td align="left" valign="top">February</td> <td>I've moved to Zhejiang University, Hangzhou</td></tr>
+	<tr><td align="left" valign="top">February</td> <td>I've moved to Zhejiang University, Hangzhou</td></tr>-->
 </tbody>
 </table>
 <hr>
@@ -80,17 +92,25 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/1406.7764">An Arithmetic Transfer Identity</a>, Manuscripta Math. <b>150</b> (2016), no. 1, 1--19.</li>
 </ul>
 
-<h3 style="margin-top:36px">Lecture notes</h3>
-<ul style="margin-top:6px; margin-bottom:18px">
+<h3 style="margin-top:24px">Lecture notes</h3>
+<ul style="margin-top:6px; margin-bottom:24px">
 <li><a href="EC.pdf">Elliptic curves and their moduli spaces</a></li>
 </ul>
 
-</body>
+<hr>
+
+<h3>Past activities at ZJU</h3>
+
+<table width="100%" style="margin:0px 0px 20px 16px;">
+<tbody>
+	<tr><td align="left" valign="top">Spring 2025</td> <td>Study group on the <a href="activities/2025_spring_aipf.html">arithmetic inner product formula</a></td></tr>
+</tbody>
+</table>
 
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: August 19, 2025</p>
+<p style="color: grey;">Last updated: September 16, 2025</p>
 </footer> 
 
 </div>
