--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <h3>Activities Fall 2025</h3>
 
-<h4>Introductory course on Shimura varieties</h4>
+<h4>Introduction to Shimura varieties</h4>
 
 <p>Please see the <a style="color:#0000EE" href="SV.html">course webpage</a> for the schedule and more information. Lecture notes will be updated regularly here:</p>
 <ul>
-<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Sept 16)</li>
+<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Sept 17)</li>
 </ul>
 
 <h4>Q & A session</h4>
@@ -110,7 +110,7 @@ Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: September 16, 2025</p>
+<p style="color: grey;">Last updated: September 17, 2025</p>
 </footer> 
 
 </div>
