--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <p>Please see the <a style="color:#0000EE" href="SV.html">course webpage</a> for the schedule and more information. Lecture notes will be updated regularly here:</p>
 <ul>
-<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Sept 17)</li>
+<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Sept 23)</li>
+<li style="color:red">Our next lecture is on Sunday, September 28. It substitutes for Tuesday, October 7, in accordance with the holiday plan of the school.</li>
 </ul>
 
 <h4>Q & A session</h4>
@@ -79,7 +80,7 @@ Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and
 <ul style="margin-top:6px; margin-bottom:18px">
 <li><a href="https://arxiv.org/abs/2508.12598">Gaussian test functions and Jacquet-Rallis transfer</a> (with Siddarth Sankaran and Tonghai Yang), Preprint (2025).</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2504.17484">On unitary Shimura varieties at ramified primes</a> (with Yu Luo and Zhiyu Zhang), Preprint (2025).</li>
-<li style="margin-top:12px"><a href="ASW.pdf">An arithmetic Siegel-Weil formula for central simple algebras</a> (with Tonghai Yang), Preprint (2024).</li>
+<li style="margin-top:12px"><a href="ref/ASW.pdf">An arithmetic Siegel-Weil formula for central simple algebras</a> (with Tonghai Yang), Preprint (2024).</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2308.02458">A linear AFL for quaternion algebras</a> (with Nuno Hultberg), Canad. J. Math. (2025), <a href="https://doi.org/10.4153/S0008414X24001020">FirstView</a>.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2307.11716">Arithmetic transfer for inner forms of GL_2n</a> (with Qirui Li), to appear in Forum Math. Sigma.</li>
 <li style="margin-top:12px"><a href="https://arxiv.org/abs/2208.10144">Linear AFL: The non-basic case</a> (with Qirui Li), Compos. Math. <b>161</b> (2025), no. 2, 385--425.</li>
@@ -94,7 +95,7 @@ Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and
 
 <h3 style="margin-top:24px">Lecture notes</h3>
 <ul style="margin-top:6px; margin-bottom:24px">
-<li><a href="EC.pdf">Elliptic curves and their moduli spaces</a></li>
+<li><a href="ref/EC.pdf">Elliptic curves and their moduli spaces</a></li>
 </ul>
 
 <hr>
@@ -110,7 +111,7 @@ Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: September 17, 2025</p>
+<p style="color: grey;">Last updated: September 23, 2025</p>
 </footer> 
 
 </div>
