--- a/SV.html
+++ b/SV.html
@@ -29,6 +29,10 @@
 
 <p style="color:red;">Exceptions:</p>
 
+<ul>
+<li style="color:red">Our next lecture is on Sunday, September 28. It substitutes for Tuesday, October 7, in accordance with the holiday plan of the school.</li>
+</ul>
+
 <table  style="margin:0px 0px 20px 40px; border:1px solid black; border-collapse:collapse;">
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:8px;">No lecture and no Q&A on</td>
@@ -52,7 +56,7 @@ These can be questions that came up during the lecture, when reviewing the lectu
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: Sept 16, 2025</p>
+<p style="color: grey;">Last updated: Sept 23, 2025</p>
 </footer> 
 
 </div>
