--- a/SV.html
+++ b/SV.html
@@ -29,9 +29,7 @@
 
 <p style="color:red;">Exceptions:</p>
 
-<ul>
-<li style="color:red">Our next lecture is on Sunday, September 28. It substitutes for Tuesday, October 7, in accordance with the holiday plan of the school.</li>
-</ul>
+<p style="color:red">Our next lecture is on Sunday, September 28. It substitutes for Tuesday, October 7, in accordance with the holiday plan of the school.</p>
 
 <table  style="margin:0px 0px 20px 40px; border:1px solid black; border-collapse:collapse;">
 <tr>
