--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <p>Please see the <a style="color:#0000EE" href="SV.html">course webpage</a> for the schedule and more information. Lecture notes will be updated regularly here:</p>
 <ul>
-<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Oct 16)</li>
+<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Oct 20)</li>
 </ul>
 
 <h4>Q & A session</h4>
@@ -64,7 +64,7 @@ Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and
 <table width="100%" style="margin:0px 0px 20px 16px;">
 <tbody>
 	<tr><td align="left" valign="top">November 24 - 28</td> <td>Arithmetic Geometry Conference, Shenzhen (<a href="https://huigaomath.github.io/events/2025/2025-arithgeom-shenzhen.html">Link</a>)</td></tr>
-	<tr><td align="left" valign="top">September 23 - 26</td> <td>Visiting Yihang Zhu at Tsinghua University</td></tr>
+	<tr><td align="left" valign="top">September 23 - 26</td> <td>Visiting Yihang Zhu at Tsinghua University, Talk in <a href="https://ymsc.tsinghua.edu.cn/en/info/1060/3051.htm">Number theory colloquium</a></td></tr>
 <!--	<tr><td align="left" valign="top">July 7 - 11</td> <td>Visit to Max Planck Institute, Bonn</td></tr>
 	<tr><td align="left" valign="top">June 22 - 27</td> <td>Visit to MFO Oberwolfach, Workshop on Non-Archimedean Geometry and Applications </td></tr>
 	<tr><td align="left" valign="top">June 3</td> <td>Talk in the International Seminar on Automorphic Forms</td></tr>
@@ -110,7 +110,7 @@ Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: October 16, 2025</p>
+<p style="color: grey;">Last updated: October 20, 2025</p>
 </footer> 
 
 </div>
