--- a/SV.html
+++ b/SV.html
@@ -32,7 +32,7 @@
 <table  style="margin:0px 0px 20px 40px; border:1px solid black; border-collapse:collapse;">
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:8px;">No lecture and no Q&A on</td>
-	<td style="border:1px solid black; border-collapse:collapse; padding:8px;">25.09., 30.10., 25.11., 27.11.</td>
+	<td style="border:1px solid black; border-collapse:collapse; padding:8px;">25.09., 30.10., 25.11., 27.11., 18.12.</td>
 </tr>
 <tr>
 	<td style="border:1px solid black; border-collapse:collapse; padding:8px;">90 minute Thursday lecture (15:05 -- 16:40)</td>
@@ -52,7 +52,7 @@ These can be questions that came up during the lecture, when reviewing the lectu
 
 <footer>
 <hr>
-<p style="color: grey;">Last updated: Sept 30, 2025</p>
+<p style="color: grey;">Last updated: Nov 04, 2025</p>
 </footer> 
 
 </div>
