--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <h4>Study group on cyclic base change and the trace formula</h4>
 
-Please see here for the <a style="color:#0000EE" href="cyclic.html">schedule and seminar program</a>.
+Please see here for the <a style="color:#0000EE" href="activities/2025_fall_cyclic.html">schedule and seminar program</a>.
 
 <h4>Upcoming travels</h4>
 
