--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 <p>Please see the <a style="color:#0000EE" href="SV.html">course webpage</a> for the schedule and more information. Lecture notes will be updated regularly here:</p>
 <ul>
-<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Dec 25)</li>
+<li><a style="color:#0000EE" href="ref/SV.pdf">Lecture notes on Shimura varieties</a> (last updated Dec 30)</li>
 <li><span style="color:#F54927">Exame date: January 12</span> Please contact me by email if you have not taken part in the practice exam or talked to me in class</li>
 </ul>
 
@@ -59,7 +59,7 @@ theta series (Kudla program), and algebraic aspects of their intersection theory
 
 Please see here for the <a style="color:#0000EE" href="activities/2025_fall_cyclic.html">schedule and seminar program</a>.
 
-<h4>Upcoming travels</h4>
+<h4>Upcoming and recent travels</h4>
 
 </table>
 <table width="100%" style="margin:0px 0px 20px 16px;">
